WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259941
ANGLE - error: implicit capture of 'this' with a capture default of '=' is deprecated [-Werror,-Wdeprecated-this-capture]
https://bugs.webkit.org/show_bug.cgi?id=259941
Summary
ANGLE - error: implicit capture of 'this' with a capture default of '=' is de...
Dean Jackson
Reported
2023-08-08 13:17:21 PDT
Newer versions of clang detect the deprecated implicit capture of 'this' in lambdas.
Attachments
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2023-08-08 13:17:28 PDT
<
rdar://problem/111828854
>
Dean Jackson
Comment 2
2023-08-08 13:18:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16489
EWS
Comment 3
2023-08-08 20:54:18 PDT
Committed
266712@main
(f6e9a70fa4e3): <
https://commits.webkit.org/266712@main
> Reviewed commits have been landed. Closing PR #16489 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug