Cherry-pick 266712@main (f6e9a70fa4e3). rdar://111828854

ANGLE - error: implicit capture of 'this' with a capture default of '=' is deprecated [-Werror,-Wdeprecated-this-capture]
    https://bugs.webkit.org/show_bug.cgi?id=259941
    rdar://111828854

    Reviewed by David Kilzer.

    Newer versions of clang detect the now-deprecated implicit capture
    of 'this' in lambdas. Replace that capture with explicit forms.

    * Source/ThirdParty/ANGLE/changes.diff:
    * Source/ThirdParty/ANGLE/src/compiler/translator/Compiler.cpp:
    (sh::TCompiler::resizeClipAndCullDistanceBuiltins):

    Canonical link: https://commits.webkit.org/266712@main

(cherry picked from commit 72de556c6a4b16e694c3e2887687c3c614f51c9a)

Identifier: 265870.436@safari-7616-branch